# cgmsv-starter

./: CMakeLists.txt  Exec.cpp  Exec.hpp  app.rc  resource.h
res/: app.mjs  cg.mjs  common.mjs  index.css  index.htm  mapping.mjs
src/: main.cpp
src/JsExt/: JsExt.cpp  JsExt.h  JsExtW.h  Shell.cpp
type/: data.d.ts  index.d.ts
